# eda_tool_mcp_server

./: README.md  pyproject.toml  setup.py
src/mcp_server_ds/: requirements.txt  server.py
