[project]
name = "mcp-server-ds"
version = "0.1.6"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "annotated-types>=0.7.0",
  "anyio>=4.6.2.post1",
  "certifi>=2024.8.30",
  "click>=8.1.7",
  "colorama>=0.4.6",
  "h11>=0.14.0",
  "httpcore>=1.0.7",
  "httpx>=0.28.0",
  "httpx-sse>=0.4.0",
  "idna>=3.10",
  "joblib>=1.4.2",
  "mcp>=1.0.0",
  "numpy>=2.1.3",
  "packaging>=24.2",
  "pandas>=2.2.3",
  "patsy>=1.0.1",
  "pydantic>=2.10.3",
  "pydantic-core>=2.27.1",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2024.2",
  "scikit-learn>=1.5.2",
  "scipy>=1.14.1",
  "six>=1.16.0",
  "sniffio>=1.3.1",
  "sse-starlette>=2.1.3",
  "starlette>=0.41.3",
  "statsmodels>=0.14.4",
  "threadpoolctl>=3.5.0",
  "typing-extensions>=4.12.2",
  "tzdata>=2024.2",
  "uvicorn>=0.32.1"
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-ds = "mcp_server_ds:main"
